--- a/app/src/main/res/layout/item_apod.xml
+++ b/app/src/main/res/layout/item_apod.xml
@@ -1,55 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
-  xmlns:app="http://schemas.android.com/apk/res-auto"
-  android:padding="@dimen/history_padding">
+  android:theme="@style/HistoryItem">
 
   <ImageView
-    android:scaleType="fitCenter"
-    android:adjustViewBounds="true"
-    android:contentDescription="@string/title_history"
     android:id="@+id/thumbnail"
-    android:layout_width="@dimen/thumbnail_width"
+    android:layout_width="0dp"
     android:layout_height="wrap_content"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
+    android:adjustViewBounds="true"
+    android:contentDescription="@string/default_description"
+    android:scaleType="fitXY"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toStartOf="@+id/title"
     app:layout_constraintHorizontal_weight="3"
-    android:layout_marginEnd="@dimen/thumbnail_margin"/>
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"/>
 
   <TextView
     android:id="@+id/title"
-    android:layout_width="@dimen/title_width"
+    android:layout_width="0dp"
     android:layout_height="wrap_content"
-    app:layout_constraintStart_toEndOf="@id/thumbnail"
-    app:layout_constraintTop_toTopOf="parent"
+    style="@style/HistoryItem.Title"
     app:layout_constraintBottom_toTopOf="@+id/access"
     app:layout_constraintEnd_toStartOf="@+id/date"
     app:layout_constraintHorizontal_weight="4"
-    app:layout_constraintVertical_chainStyle="packed"
-    android:layout_marginEnd="@dimen/title_margin"
-    android:layout_marginBottom="@dimen/title_margin"/>
+    app:layout_constraintStart_toEndOf="@id/thumbnail"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintVertical_chainStyle="packed"/>
 
   <TextView
     android:id="@+id/date"
-    android:layout_width="@dimen/date_width"
+    android:layout_width="0dp"
     android:layout_height="wrap_content"
-    app:layout_constraintStart_toEndOf="@id/title"
     app:layout_constraintBaseline_toBaselineOf="@id/title"
     app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_weight="3"/>
+    app:layout_constraintHorizontal_weight="3"
+    app:layout_constraintStart_toEndOf="@id/title"/>
 
   <TextView
     android:id="@+id/access"
-    android:layout_width="@dimen/access_width"
+    android:layout_width="0dp"
     android:layout_height="wrap_content"
-    app:layout_constraintTop_toBottomOf="@id/title"
-    app:layout_constraintStart_toStartOf="@id/title"
-    app:layout_constraintEnd_toEndOf="parent"
+    android:textAlignment="viewStart"
+    style="@style/HistoryItem.Access"
     app:layout_constraintBottom_toBottomOf="parent"
-    android:textAlignment="viewStart"/>
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="@id/title"
+    app:layout_constraintTop_toBottomOf="@id/title"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
