--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,11 +3,6 @@
   <dimen name="activity_horizontal_margin">16dp</dimen>
   <dimen name="activity_vertical_margin">16dp</dimen>
   <dimen name="toast_vertical_margin">64dp</dimen>
-  <dimen name="history_padding">8dp</dimen>
-  <dimen name="thumbnail_margin">8dp</dimen>
-  <dimen name="title_margin">8dp</dimen>
-  <dimen name="access_width">0dp</dimen>
-  <dimen name="date_width">0dp</dimen>
-  <dimen name="title_width">0dp</dimen>
-  <dimen name="thumbnail_width">0dp</dimen>
+  <dimen name="item_apod_spacing">8dp</dimen>
+
 </resources>
